# rust-serialization-benchmarks

rust/: Cargo.toml
rust/src/: goser.rs  lib.rs
